@@ -1,6 +1,6 @@
 [package]
 name = "dhcproto"
-version = "0.8.0"
+version = "0.9.0-alpha"
 authors = ["Ian Laidlaw <ilaidlaw@bluecatnetworks.com>", "Evan Cameron <cameron.evan@gmail.com>"]
 edition = "2021"
 description = """
